# algorithm-test-template

./: README.md  make_proj.sh
project/: CMakeLists.txt  main.cpp  reinput.sh
